--- a/src/skins/insales/Button.less
+++ b/src/skins/insales/Button.less
@@ -34,7 +34,7 @@
 }
 
 .@{prefix}-btn button {
-	padding: 4px 10px;
+	padding: @btn-padding-top @btn-padding-right @btn-padding-bottom @btn-padding-left;
 	font-size: @font-size;
 	line-height: @line-height;
 	*line-height: @line-height - 4px;
