--- a/src/skins/insales/ButtonGroup.less
+++ b/src/skins/insales/ButtonGroup.less
@@ -25,3 +25,7 @@
 .@{prefix}-btn-group .@{prefix}-btn.@{prefix}-flow-layout-item {
 	margin: 0;
 }
+
+.@{prefix}-flow-layout-item.@{prefix}-btn-group .@{prefix}-menubtn.@{prefix}-fixed-width span {
+    width: auto;
+}
