--- a/src/skins/insales/Icons.Ie7.less
+++ b/src/skins/insales/Icons.Ie7.less
@@ -22,14 +22,12 @@
 	font-style: normal;
 }
 
-@iconSize: 16px;
-
 .@{prefix}-ico {
 	font-family: 'tinymce';
 	font-style: normal;
 	font-weight: normal;
 	font-size: @iconSize;
-	line-height: 16px;
+	line-height: @iconSize;
 	vertical-align: text-top;
 	-webkit-font-smoothing: antialiased;
 
