--- a/src/skins/insales/Icons.less
+++ b/src/skins/insales/Icons.less
@@ -22,15 +22,13 @@
 	font-style: normal;
 }
 
-@iconSize: 16px;
-
 .@{prefix}-ico {
 	font-family: 'tinymce', Arial;
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
 	font-size: @iconSize;
-	line-height: 16px;
+	line-height: @iconSize;
 	speak: none;
 	vertical-align: text-top;
 	-webkit-font-smoothing: antialiased;
