--- a/src/skins/insales/ColorButton.less
+++ b/src/skins/insales/ColorButton.less
@@ -18,7 +18,7 @@
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	margin-left: -14px;
+	margin-left: (-@btn-padding-left - 10px); // -14px;
 	margin-top: 7px;
 	background: gray;
 	width: 13px;
