--- a/src/skins/insales/Variables.less
+++ b/src/skins/insales/Variables.less
@@ -12,6 +12,8 @@
 @has-radius:                     true;
 @has-boxshadow:                  true;
 
+@iconSize: 16px;
+
 // Text colors
 @text:                           #191919;
 @text-inverse:                   white;
@@ -20,7 +22,7 @@
 @text-error:                     #aa0000;
 
 // Button
-@btn-text:                       lighten(@text, 15%);
+@btn-text:                       lighten(@text, 20%);
 @btn-text-shadow:                @text-inverse;
 @btn-border-top:                 rgba(0, 0, 0, .1);
 @btn-border-right:               rgba(0, 0, 0, .1);
@@ -47,6 +49,11 @@
 @btn-primary-border-right:       mix(@btn-border-right, @btn-primary-bg, 50%);
 @btn-primary-border-bottom:      mix(@btn-border-bottom, @btn-primary-bg, 50%);
 @btn-primary-border-left:        mix(@btn-border-left, @btn-primary-bg, 50%);
+
+@btn-padding-top: 4px;
+@btn-padding-bottom: 2px;
+@btn-padding-right: 6px;
+@btn-padding-left: @btn-padding-right;
 
 // Menu
 @menuitem-text:                  @text;
