--- a/src/skins/insales/Variables.less
+++ b/src/skins/insales/Variables.less
@@ -11,6 +11,7 @@
 @has-gradients:                  false;
 @has-radius:                     true;
 @has-boxshadow:                  true;
+@has-button-borders:             true;
 
 @iconSize: 16px;
 
@@ -20,15 +21,16 @@
 @text-disabled:                  #aaa;
 @text-shadow:                    0 1px 1px hsla(hue(@text-inverse), saturation(@text-inverse), lightness(@text-inverse), 0.75);
 @text-error:                     #aa0000;
+@text-warning:                   #c09853;
+@text-success:                   #468847;
 
 // Button
 @btn-text:                       lighten(@text, 20%);
 @btn-text-shadow:                @text-inverse;
 @btn-border-top:                 rgba(0, 0, 0, .1);
 @btn-border-right:               rgba(0, 0, 0, .1);
-@btn-border-bottom:              fadein(rgba(0, 0, 0, .1), 15%);
-@btn-border-left:                fadein(rgba(0, 0, 0, .1), 15%);
-@btn-split-border:               #bdbdbd;
+@btn-border-bottom:              rgba(0, 0, 0, .1);
+@btn-border-left:                rgba(0, 0, 0, .1);
 @btn-caret-border:               @btn-text;
 @btn-text-disabled:              @text-disabled;
 @btn-box-shadow:                 inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
@@ -38,57 +40,98 @@
 @btn-bg-hlight:                  #fafafa;
 @btn-bg-hover:                   darken(@btn-bg, 5%);
 @btn-bg-hlight-hover:            darken(@btn-bg-hlight, 5%);
+@btn-border-hover:               darken(@btn-bg, 20%);
+@btn-border-active:              darken(@btn-bg, 20%);
+@btn-padding:                    4px 6px 2px 6px;
 
 @btn-primary-bg:                 #7094C0;
 @btn-primary-bg-hlight:          #7094C0;
 @btn-primary-bg-hover:           darken(@btn-primary-bg, 5%);
-@btn-primary-bg-hlight-hover:    darken(@btn-primary-bg-hlight, 5%);
-@btn-primary-text:               @text-inverse;
+@btn-primary-bg-hover-hlight:    darken(@btn-primary-bg-hlight, 5%);
+@btn-primary-text:               #fff;
 @btn-primary-text-shadow:        @text;
 @btn-primary-border-top:         mix(@btn-border-top, @btn-primary-bg, 50%);
 @btn-primary-border-right:       mix(@btn-border-right, @btn-primary-bg, 50%);
 @btn-primary-border-bottom:      mix(@btn-border-bottom, @btn-primary-bg, 50%);
 @btn-primary-border-left:        mix(@btn-border-left, @btn-primary-bg, 50%);
+@btn-primary-border:             transparent;
+@btn-primary-border-hover:       transparent;
 
-@btn-padding-top: 4px;
-@btn-padding-bottom: 2px;
-@btn-padding-right: 6px;
-@btn-padding-left: @btn-padding-right;
+// Button group
+@btn-group-border-width:         1px;
 
 // Menu
 @menuitem-text:                  @text;
 @menu-bg:                        @btn-bg;
+@menu-margin:                    -1px 0 0;
 @menu-border:                    rgba(0, 0, 0, 0.2);
 @menubar-border:                 mix(@panel-border, @panel-bg, 60%);
 @menuitem-text-inverse:          @text;
 @menubar-bg-active:              darken(@btn-bg, 10%);
-@menuitem-bg-hover:              #E1E1E1;
+@menuitem-bg-hover:              #e1e1e1;
 @menuitem-bg-selected:           @menuitem-bg-hover;
 @menuitem-bg-selected-hlight:    @menuitem-bg-hover;
 @menuitem-bg-disabled:           #CCC;
 @menuitem-caret:                 @menuitem-text;
 @menuitem-caret-selected:        @menuitem-text-inverse;
-@menuitem-separator-top:         #CBCBCB;
-@menuitem-separator-bottom:      @menu-bg;
-@menuitem-bg-active:             #E5E2D9;
-@menuitem-text-active:           @text;
+@menuitem-separator-top:         transparent;
+@menuitem-separator-bottom:      rgba(0,0,0,0.1);
+@menuitem-bg-active:             #3498db;
+@menuitem-text-active:           @text-inverse;
 @menuitem-preview-border-active: #aaa;
+@menubar-menubtn-text:           #333;
 
 // Panel
-@panel-border:                   #9E9E9E;
+@panel-border:                   #9e9e9e;
 @panel-bg:                       #fafafa;
 @panel-bg-hlight:                #fafafa;
 
 // Tabs
 @tab-border:                     #c5c5c5;
-@tab-bg:                         #e3e3e3;
+@tab-bg:                         #ffffff;
 @tab-bg-hover:                   #FDFDFD;
 @tab-bg-active:                  #FDFDFD;
+@tabs-bg:						 #FFF;
 
 // Tooltip
 @tooltip-bg:                     #000;
 @tooltip-text:                   white;
 @tooltip-font-size:              11px;
+
+// Notification
+@notification-font-size:         14px;
+@notification-bg:                #F0F0F0;
+@notification-border:            #CCCCCC;
+@notification-text:              #333333;
+@notification-success-bg:        #dff0d8;
+@notification-success-border:    #d6e9c6;
+@notification-success-text:      #3c763d;
+@notification-info-bg:           #d9edf7;
+@notification-info-border:       #779ECB;
+@notification-info-text:         #31708f;
+@notification-warning-bg:        #fcf8e3;
+@notification-warning-border:    #faebcc;
+@notification-warning-text:      #8a6d3b;
+@notification-error-bg:          #f2dede;
+@notification-error-border:      #ebccd1;
+@notification-error-text:        #a94442;
+
+// Infobox
+@infobox-bg:                     @notification-bg;
+@infobox-border:                 @notification-border;
+@infobox-text:                   @notification-text;
+@infobox-success-bg:             @notification-success-bg;
+@infobox-success-border:         @notification-success-border;
+@infobox-success-text:           @notification-success-text;
+@infobox-info-bg:                @notification-info-bg;
+@infobox-info-border:            @notification-info-border;
+@infobox-info-text:              @notification-info-text;
+@infobox-warning-bg:             @notification-warning-bg;
+@infobox-warning-border:         @notification-warning-border;
+@infobox-warning-text:           @notification-warning-text;
+@infobox-error-bg:               @notification-error-bg;
+@infobox-error-border:           @notification-error-border;
+@infobox-error-text:             @notification-error-text;
 
 // Window
 @window-border:                  #c5c5c5;
@@ -131,7 +174,11 @@
 @textbox-box-shadow:             inset 0 1px 1px rgba(0, 0, 0, 0.075);
 @textbox-bg:                     #fff;
 @textbox-border:                 #c5c5c5;
-@textbox-border-focus:           rgba(82, 168, 236, .8);
+@textbox-border-focus:           #3498db;
+
+// Selectbox
+@selectbox-bg:                   @textbox-bg;
+@selectbox-border:               @textbox-border;
 
 // Throbber
 @throbber-bg:                    #fff url('img/loader.gif') no-repeat center center;
@@ -146,9 +193,25 @@
 
 // Grid
 @grid-bg-active:                 @menuitem-bg-active;
-@grid-border-active:             #a1a1a1;
+@grid-border-active:             @menuitem-bg-active;
 @grid-border:                    #d6d6d6;
 
 // Misc
 @colorbtn-backcolor-bg:          #BBB;
 @iframe-border:                  @panel-border;
+
+// Slider
+@slider-border:                  #AAA;
+@slider-bg:                      #EEE;
+@slider-handle-border:           #BBB;
+@slider-handle-bg:               #DDD;
+@slider-handle-bg-focus:         #BBB;
+
+// Progress
+@progress-border:                #ccc;
+@progress-bar-bg:                #dfdfdf;
+@progress-bar-bg-hlight:         #cccccc;
+@progress-text:                  @text;
+
+// Flow layout
+@flow-layout-spacing:            2px;
